updated css and links

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
 
+  <script src="https://kit.fontawesome.com/2be93387f1.js" crossorigin="anonymous"></script>
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Dictionary App</title>
